# ifctoneo4j

./: .gitignore  DOCUMENTATION.md  LICENSE  NOTICE  README.md  ifc-to-lbd-schema.md  pyproject.toml  test_with_real_ifc.py  testing_package.py
.github/workflows/: publish.yml
ifctoneo4j/: __init__.py  config.py  main.py  product_map.py  requirements.txt
ifctoneo4j/converters/: elements.py  properties.py  spatial.py
ifctoneo4j/core/: ifc_loader.py  string_ops.py  unit_handler.py
ifctoneo4j/geometry/: bounding_box.py
ifctoneo4j/neo4j/: schema.py  writer.py
ifctoneo4j/tests/: test_bounding_box.py  test_elements.py  test_product_map.py  test_properties.py  test_string_ops.py  test_unit_handler.py
